tests/machine/x/go/group_by.error
Error on line 0: run error: exit status 1
panic: interface conversion: interface {} is main.PeopleItem, not map[string]interface {}

goroutine 1 [running]:
main.main.main.func1.func2(...)
	/workspace/mochi/tests/machine/x/go/group_by.go:78
main.main.func1(...)
	/workspace/mochi/tests/machine/x/go/group_by.go:81
main.main()
	/workspace/mochi/tests/machine/x/go/group_by.go:85 +0x9ce
exit status 2

1: //go:build ignore
